--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                         <div class="intro-icon">⚡</div>
                                         <div class="intro-title-group">
                                             <h2 class="intro-title">Electrónica Analógica III</h2>
-                                            <p class="intro-subtitle">Universidad Surcolombiana • 5to Semestre</p>
+                                            <p class="intro-subtitle">• Universidad Surcolombiana •</p>
                                         </div>
                                     </div>
                                     
