--- a/index.html
+++ b/index.html
@@ -255,7 +255,18 @@
                                             </div>
                                         </div>
 
-<!-- Duplicados para loop infinito -->
+                                        <!-- ★ PROYECTO 6: ADSR + LFO - SINTETIZADOR MOOG (NUEVO) -->
+                                        <div class="carousel-item group bg-white/10 backdrop-blur-md rounded-lg overflow-hidden border border-white/20 hover:border-indigo-400/60 transition-all duration-300 cursor-pointer hover:scale-105 hover:bg-white/15 relative" onclick="openProjectModal(6)">
+                                            <div class="h-20 bg-gradient-to-br from-indigo-500 to-purple-600 flex items-center justify-center text-3xl">
+                                                🎹
+                                            </div>
+                                            <div class="p-2">
+                                                <h4 class="text-white font-semibold text-[10px] mb-0.5 line-clamp-2 leading-tight">ADSR + LFO: Sintetizador Moog</h4>
+                                                <p class="text-white/50 text-[8px]">NE555 • TL074 • KiCad</p>
+                                            </div>
+                                        </div>
+
+                                        <!-- Duplicados para loop infinito -->
 
 
                                         <!-- Duplicados para loop infinito -->
@@ -288,9 +299,17 @@
                                                 <p class="text-white/50 text-[8px]">LM317 • LM337</p>
                                             </div>
                                         </div>
-
-                                        
-
+                                        <!-- ★ DUPLICADO PROYECTO 6: ADSR + LFO -->
+                                        <div class="carousel-item group bg-white/10 backdrop-blur-md rounded-lg overflow-hidden border border-white/20 hover:border-indigo-400/60 transition-all duration-300 cursor-pointer hover:scale-105 hover:bg-white/15 relative" onclick="openProjectModal(6)">
+                                            
+                                            <div class="h-20 bg-gradient-to-br from-indigo-500 to-purple-600 flex items-center justify-center text-3xl">
+                                                🎹
+                                            </div>
+                                            <div class="p-2">
+                                                <h4 class="text-white font-semibold text-[10px] mb-0.5 line-clamp-2 leading-tight">ADSR + LFO: Sintetizador Moog</h4>
+                                                <p class="text-white/50 text-[8px]">NE555 • TL074 • KiCad</p>
+                                            </div>
+                                        </div>                
                                     </div>
                                     <button class="carousel-btn prev" onclick="pauseCarousel()">&lsaquo;</button>
                                     <button class="carousel-btn next" onclick="resumeCarousel()">&rsaquo;</button>
